@@ -1,5 +1,7 @@
 = master
 
+* Add multi_public plugin, for serving files from multiple public directories (jeremyevans)
+
 * Support report-to directive in the content_security_policy plugin (jeremyevans)
 
 * Add Vary response header when using type_routing plugin with Accept request header to prevent caching issues (jeremyevans)
